2015-10-08  Maciej W. Rozycki  <macro@imgtec.com>

	* MAINTAINERS: Update my email address.

2015-10-08  Markus Metzger  <markus.t.metzger@intel.com>

	* record-btrace.c (record_btrace_resume): Fix void return.

2015-10-07  Yao Qi  <yao.qi@linaro.org>

	* aarch64-tdep.c: Include opcode/aarch64.h.
	(submask): Move it above.
	(bit): Likewise.
	(bits): Likewise.
	(aarch64_software_single_step): Call aarch64_decode_insn.
	Decode instruction by aarch64_inst instead of using
	aarch64_decode_bcond and decode_masked_match.

2015-10-06  Pitchumani Sivanupandi  <pitchumani.s@atmel.com>

	* cli/cli-dump.c (restore_command): Parse load_offset (bias) as address
	only when the file is binary.

2015-10-02  James Bowman  <james.bowman@ftdichip.com>

	* ft32-tdep.c (ft32_analyze_prologue): Add function prolog
	subroutine handling.

2015-10-01  Simon Marchi  <simon.marchi@ericsson.com>

	* common/vec.h (VEC_OP (T,cleanup)): Add pointer cast.

2015-09-30  Doug Evans  <dje@google.com>

	* dwarf2read.c (setup_type_unit_groups): Add comment.

2015-09-30  Pedro Alves  <palves@redhat.com>

	* linux-nat.c (linux_nat_always_non_stop_p): Always return 1.
	* x86-linux-nat.c (x86_linux_always_non_stop_p): Delete.
	(x86_linux_create_target): Don't install
	x86_linux_always_non_stop_p.

2015-09-30  Don Breazeal  <donb@codesourcery.com>

	* remote.c (remote_parse_stop_reply): Call strprefix instead
	of strncmp.

2015-09-30  Simon Marchi  <simon.marchi@ericsson.com>

	* gdbarch.sh (struct gdbarch_info): Change tdep_info's type to void *.
	* gdbarch.h: Regenerate.
	* i386-tdep.c (i386_gdbarch_init): Remove cast to
	struct gdbarch_tdep_info *.
	* mips-tdep.c (mips_gdbarch_init): Likewise.
	* ppc-linux-tdep (ppu2spu_sniffer): Likewise.
	* rs6000-tdep.c (rs6000_gdbarch_init): Likewise.
	* spu-multiarch.c (spu_gdbarch): Likewise.

2015-09-30  Kevin Buettner  <kevinb@redhat.com>

	* infcmd.c (finish_command_fsm_should_stop): Don't attempt to
	record a NULL value.
