@@ -1,3 +1,9 @@
+2015-10-08  Iain Buclaw  <ibuclaw@gdcproject.org>
+
+	* d-exp.y: (UnaryExpression): Support `type.sizeof' expressions.
+	(PostfixExpression): Support `expr.sizeof' expressions.
+	(PrimaryExpression): Support `typeof(expr)' expressions.
+
 2015-10-08  Maciej W. Rozycki  <macro@imgtec.com>
 
 	* MAINTAINERS: Update my email address.
